
Version 2.0-8 (opened March 19, 2013)

	* merge r2540: remove hard-coded inconsolata fonts.
	* merge r2539: stressplot return data in input order.
	* merge r2538: use expression(R^2) in stressplot.
	* merge r2535, 2536: better positioning of arrow labels.
	* merge r2534: lwd in ordisurf.
	* merge r2533: ordipointlabel uses ordiArgAbsorber.
	* merge r2504: notation in adipart.Rd.
	* merge r2497: avoid visible ~ in .Rnw.
	* merge r2490 thru 2493: ordisurf new options.
	* merge r2484 thru 2486: betadisper fixes (centroid with one
	group, call it medoid).
	
Version 2.0-7 (released March 19, 2013)

	* merge r2476: take back part of 2434 and return matrix from
	wcmdscale unless eigenvalues are requested.
	* merge r2469, 2470: do not use u.eig & v.eig.
	* merge r2468: tabasco checks against negative data.
	* merge r2462: fix "asymp" model in fitspecaccum.
	* merge r2458: restructure fitspecaccum.
	* merge r2453: nestedtemp failed with fill < 0.38%.
	* merge r2452: plot/text.cca gained axis.bp = TRUE argument. 
	* merge r2448 (partly), 2449: print.monoMDS clearer about
	convergence. Only this part merged: metaMDSiter untouched.
	* handcraft r2447: metaMDSiter gained argument 'maxit'.
	* merge r2443: edit cca.object.Rd.
	* merge r2434: return wcmdscale object always with non-default
	arguments.
	* merge r2432: edit cca.Rd.
	* merge r2431,2433,2435 thru 2442: add tabasco().

Version 2.0-6 (released February 11, 2013)

	* merge 2420, 2425: cca cross references.
	* merge 2417 thru 2419: predict & fitted upgraded for cca etc.  
	* merge 2414: adjustment in predict.capscale.
	* merge 2408: FAQ on random effects in cca etc.
	* merge 2404,2411: refer Legendre & Legendre for the vegan rda
	algorithm.
	* merge 2934 (partial, mc): oecosimu handles nestedfun() returning
	data.frame. Not merged: checking length of statistic when setting
	its name.
	* merge 2932,3: matching names in treedive() and treedist().
	* merge 2388 (partial), 2389, 2390: faster protest, the part of